--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build"
   },
   "repository": {
     "type": "git",
