--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build"
+    "build": "next build"
   },
   "repository": {
     "type": "git",
