--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build && next export -o _static",
+    "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
   },
   "repository": {
     "type": "git",
