--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
+    "classnames": "^2.2.6",
     "next": "^10.0.5",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "sass": "^1.32.5"
+    "swiper": "^6.4.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
     "@types/react-redux": "^7.1.16",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "next-compose-plugins": "^2.2.1",
+    "path": "^0.12.7",
+    "sass": "^1.32.5",
     "typescript": "^4.1.3"
   },
   "scripts": {
