--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
         build:
             context: ./
             dockerfile: ./Dockerfile
+        volumes:
+            - ./:/app/
         depends_on:
             - api
     mongo:
