--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,8 @@
     "mongoose": "^5.9.15",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.11"
   }
 }
