--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "swiper": "^6.4.9"
