--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,72 @@
 {
-    "extends": "@vsemayki/eslint-config-typescript-codestyle",
+    "plugins": [
+        "@typescript-eslint",
+        "prettier",
+        "simple-import-sort",
+        "import"
+    ],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
+        "plugin:jsx-a11y/recommended",
+        "prettier/@typescript-eslint",
+        "plugin:prettier/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 2020,
+        "sourceType": "module",
+        "project": ["./tsconfig.json"]
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        },
+    },
+    "env": {
+        "browser": true,
+        "node": true,
+        "es6": true
+    },
     "rules": {
-        "@typescript-eslint/ban-ts-ignore": "off"
+        "no-debugger": "off",
+        "no-console": 0,
+        "no-var": "error",
+        "semi": "error",
+        "no-multi-spaces": "error",
+        "space-in-parens": "error",
+        "no-multiple-empty-lines": "error",
+        "prefer-const": "error",
+        "prettier/prettier": ["error",
+            {},
+            { "usePrettierrc": true
+            }
+        ],
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "jsx-a11y/anchor-is-valid": [
+            "warn",
+            {
+                "components": ["Link"
+                ],
+                "specialLink": ["hrefLeft", "hrefRight",
+                ],
+                "aspects": ["invalidHref", "preferButton"
+                ]
+            }
+        ],
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": [
+            "error"
+        ],
+        "@typescript-eslint/explicit-module-boundary-types": 0,
     }
 }
