--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-    "semi": true,
-    "singleQuote": true,
-    "tabWidth": 4,
-    "trailingComma": "es5"
+  "semi": true,
+  "trailingComma": "all",
+  "singleQuote": true,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "arrowParens": "avoid",
+  "jsxSingleQuote": true,
+  "useTabs": false
 }
