--- a/package.json
+++ b/package.json
@@ -10,25 +10,49 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
     "classnames": "^2.2.6",
-    "next": "^10.0.5",
+    "next": "^10.0.6",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "swiper": "^6.4.9"
+    "swiper": "^6.4.10"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
     "@types/react-redux": "^7.1.16",
-    "sass": "^1.32.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unicorn": "^27.0.0",
+    "husky": "^5.0.8",
+    "prettier": "^2.2.1",
+    "sass": "^1.32.6",
     "typescript": "^4.1.3"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export -o _static",
-    "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
+    "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
+    "lint": "eslint --debug ./",
+    "lint:write": "eslint --debug ./ --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint:write",
+      "pre-push": "lint:write"
+    }
   },
   "repository": {
     "type": "git",
