--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "dev": "next dev",
     "build": "next build && next export -o _static",
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
-    "lint": "eslint --debug ./",
+    "lint": "lint-staged",
     "lint:write": "eslint --debug ./ --fix",
     "postinstall": "husky install"
   },
