--- a/.eslintrc
+++ b/.eslintrc
@@ -67,6 +67,7 @@
         "@typescript-eslint/no-use-before-define": [
             "error"
         ],
+        "@typescript-eslint/no-unused-vars":2,
         "@typescript-eslint/explicit-module-boundary-types": 0,
     }
 }
