--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
     "settings": {
         "react": {
             "version": "detect"
-        },
+        }
     },
     "env": {
         "browser": true,
@@ -57,7 +57,7 @@
             {
                 "components": ["Link"
                 ],
-                "specialLink": ["hrefLeft", "hrefRight",
+                "specialLink": ["hrefLeft", "hrefRight"
                 ],
                 "aspects": ["invalidHref", "preferButton"
                 ]
@@ -68,6 +68,6 @@
             "error"
         ],
         "@typescript-eslint/no-unused-vars":2,
-        "@typescript-eslint/explicit-module-boundary-types": 0,
+        "@typescript-eslint/explicit-module-boundary-types": 0
     }
 }
