--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
         "import"
     ],
     "extends": [
+        "airbnb-typescript",
         "eslint:recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
@@ -68,6 +69,8 @@
             "error"
         ],
         "@typescript-eslint/no-unused-vars":2,
-        "@typescript-eslint/explicit-module-boundary-types": 0
+        "@typescript-eslint/explicit-module-boundary-types": 0,
+        "consistent-return": 0,
+        "react/jsx-props-no-spreading": 0
     }
 }
