Change config docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,48 @@
 version: '3.8'
 
 services:
-    api:
-        restart: always
-        ports:
-            - 8081:8081
-        build:
-            context: ./server
-            dockerfile: ./Dockerfile
-        command: npm run dev
-        volumes:
-            - ./server:/app/server
-        depends_on:
-            - mongo
-    frontend:
-        restart: always
-        ports:
-            - 3000:3000
-        build:
-            context: ./
-            dockerfile: ./Dockerfile
-        volumes:
-            - ./:/app/
-        depends_on:
-            - api
-    mongo:
-        image: mongo
-        expose:
-            - 27017
-        ports:
-            - 27017:27017
-        volumes:
-            - apiDB:/data/db
+  api:
+    restart: always
+    ports:
+      - 8081:8081
+    build:
+      context: ./server
+      dockerfile: ./Dockerfile
+    command: npm run dev
+    volumes:
+      - ./server:/app/server
+    depends_on:
+      - mongo
+    networks:
+      - local
+
+  frontend:
+    restart: always
+    ports:
+      - 3000:3000
+    build:
+      context: ./
+      dockerfile: ./Dockerfile
+    volumes:
+      - ./:/app/
+    depends_on:
+      - api
+    networks:
+      - local
+
+  mongo:
+    image: mongo
+    expose:
+      - 27017
+    ports:
+      - 27017:27017
+    volumes:
+      - apiDB:/data/db
+    networks:
+      - local
 
 volumes:
-    apiDB:
+  apiDB:
+
+networks:
+  local:
