--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "next": "^10.0.6",
     "next-redux-wrapper": "^6.0.2",
@@ -17,6 +18,7 @@
     "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "swiper": "^6.4.10"
   },
   "devDependencies": {
