--- a/.eslintrc
+++ b/.eslintrc
@@ -71,6 +71,8 @@
         "@typescript-eslint/no-unused-vars":2,
         "@typescript-eslint/explicit-module-boundary-types": 0,
         "consistent-return": 0,
-        "react/jsx-props-no-spreading": 0
+        "react/jsx-props-no-spreading": 0,
+        "dot-notation": "off",
+        "@typescript-eslint/dot-notation": 0
     }
 }
