--- a/.eslintrc
+++ b/.eslintrc
@@ -73,6 +73,8 @@
         "consistent-return": 0,
         "react/jsx-props-no-spreading": 0,
         "dot-notation": "off",
-        "@typescript-eslint/dot-notation": 0
+        "@typescript-eslint/dot-notation": 0,
+        "jsx-a11y/label-has-associated-control": 0,
+        "no-underscore-dangle": 0
     }
 }
