--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "moment": "^2.29.1",
     "next": "^10.0.6",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
