--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
+    "react-tooltip": "^4.2.13",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
