--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-images-uploading": "^3.1.2",
     "react-redux": "^7.2.2",
     "react-tooltip": "^4.2.13",
     "redux": "^4.0.5",
