--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs-extra": "^9.1.0",
     "mongoose": "^5.9.15",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1"
