--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,15 @@
     "body-parser": "^1.19.0",
     "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "fs-extra": "^9.1.0",
     "mongoose": "^5.9.15",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.1"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.1",
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11"
