--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
+    "install:app": "npm install",
     "dev": "next dev",
     "build": "next build && next export -o _static",
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
