--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:14
 
-RUN mkdir -p /app/server
-WORKDIR /app/server
+RUN mkdir -p /app
+WORKDIR /app
 
-COPY . /app/server
+COPY . /app
+
 RUN npm install
 RUN npm install --global kill-port
+RUN npm install --global nodemon
