--- a/client/package.json
+++ b/client/package.json
@@ -29,60 +29,13 @@
     "@types/classnames": "^2.2.11",
     "@types/luxon": "^1.25.1",
     "@types/react-redux": "^7.1.16",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unicorn": "^27.0.0",
-    "husky": "^5.0.8",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
     "sass": "^1.32.6",
-    "stylelint": "^13.9.0",
-    "stylelint-config-airbnb": "0.0.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.18.0",
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "install:app": "npm install",
     "dev": "next dev",
     "build": "next build && next export -o _static",
-    "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
-    "postinstall": "husky install",
-    "lint": "lint-staged",
-    "eslint": "eslint --debug ./ --fix",
-    "eslint:fix": "eslint ./ --fix",
-    "prettier": "npx prettier --debug-check ./",
-    "prettier:fix": "npx prettier --write",
-    "stylelint": "stylelint '**/*{.css,.scss}'",
-    "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "npm run prettier:fix",
-      "npm run eslint:fix"
-    ],
-    "*.(css|scss)": [
-      "npm run stylelint:fix"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
   },
   "repository": {
     "type": "git",
