--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.11",
     "@types/luxon": "^1.25.1",
+    "@types/node": "^14.14.27",
     "@types/react-redux": "^7.1.16",
     "sass": "^1.32.6",
     "typescript": "^4.1.3"
