--- a/admin/package.json
+++ b/admin/package.json
@@ -34,7 +34,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "dev": "next dev -p 80",
+    "dev": "next dev",
     "build": "next build && next export -o _static",
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}"
   },
