--- a/ui-kit/package.json
+++ b/ui-kit/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "ui-kit",
+  "name": "@verevinds/ui-kit",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.tsx",
+  "module": "dist/index.js",
+  "jsnext:main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build ./src/index.ts",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -25,5 +30,6 @@
     "@storybook/react": "^6.1.17",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
-  }
+  },
+  "description": ""
 }
