--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "kill-port 1111 && nodemon src/app.js"
   },
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,6 +27,10 @@
     "util": "^0.12.3"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.11"
+    "@types/classnames": "^2.2.11",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0"
   }
 }
