--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,54 +1,34 @@
 {
-    "root": true,
-    "plugins": [
-        "prettier"
-    ],
-    "extends": [
-        "airbnb-base",
-        "eslint:recommended",
-        "plugin:prettier/recommended",
-        "plugin:node/recommended"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 2020,
-        "sourceType": "module"
-    },
-    "env": {
-        "browser": true,
-        "node": true,
-        "es6": true
-    },
-    "rules": {
-        "global-require": 0,
-        "consistent-return": 0,
-        "node/exports-style": 0,
-        "node/file-extension-in-import": [
-            "error",
-            "always"
-        ],
-        "node/prefer-global/buffer": [
-            "error",
-            "always"
-        ],
-        "node/prefer-global/console": [
-            "error",
-            "always"
-        ],
-        "node/prefer-global/process": [
-            "error",
-            "always"
-        ],
-        "node/prefer-global/url-search-params": [
-            "error",
-            "always"
-        ],
-        "node/prefer-global/url": [
-            "error",
-            "always"
-        ],
-        "node/prefer-promises/dns": "error",
-        "node/prefer-promises/fs": "error",
-        "no-underscore-dangle": 0,
-        "node/no-unsupported-features/es-syntax": 0
-    }
+  "root": true,
+  "plugins": ["prettier"],
+  "extends": [
+    "airbnb-base",
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    "plugin:node/recommended"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "rules": {
+    "global-require": 0,
+    "consistent-return": 0,
+    "node/exports-style": 0,
+    "node/file-extension-in-import": ["error", "always"],
+    "node/prefer-global/buffer": ["error", "always"],
+    "node/prefer-global/console": ["error", "always"],
+    "node/prefer-global/process": ["error", "always"],
+    "node/prefer-global/url-search-params": ["error", "always"],
+    "node/prefer-global/url": ["error", "always"],
+    "node/prefer-promises/dns": "error",
+    "node/prefer-promises/fs": "error",
+    "no-underscore-dangle": 0,
+    "node/no-unsupported-features/es-syntax": 0
+  }
 }
