--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
   },
   "homepage": "https://github.com/verevinds/m-climate#readme",
   "dependencies": {
-    "hello-world": "0.0.2"
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-preset-env": "1.5.2",
+    "babel-preset-react": "6.24.1"
   }
 }
