--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     command: npm run dev
     volumes:
       - ./server:/app
-      - /app/node_modules
+      - ./node_modules:/app/node_modules
     env_file:
       - .env
     depends_on:
@@ -30,6 +30,7 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ./client:/app
+      - ./node_modules:/app/node_modules
     env_file:
       - .env
     depends_on:
@@ -48,6 +49,7 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ./admin:/app
+      - ./node_modules:/app/node_modules
     env_file:
       - .env
     depends_on:
