--- a/package.json
+++ b/package.json
@@ -30,6 +30,57 @@
       "pre-commit": "lint-staged"
     }
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/verevinds/m-climate.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/verevinds/m-climate/issues"
+  },
+  "homepage": "https://github.com/verevinds/m-climate#readme",
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@verevinds/ui-kit": "^1.0.29",
+    "axios": "^0.21.1",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-preset-env": "1.5.2",
+    "babel-preset-react": "6.24.1",
+    "body-parser": "^1.19.0",
+    "classnames": "^2.2.6",
+    "connect-busboy": "0.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "fs-extra": "^9.1.0",
+    "luxon": "^1.25.0",
+    "mongoose": "^5.9.15",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "next": "^10.0.6",
+    "next-redux-wrapper": "^6.0.2",
+    "nodemon": "^2.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
+    "react-images-uploading": "^3.1.2",
+    "react-redux": "^7.2.2",
+    "react-tooltip": "^4.2.13",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "swiper": "^6.4.10",
+    "util": "^0.12.3"
+  },
   "devDependencies": {
     "@types/node": "^14.14.27",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -58,25 +109,12 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0",
-    "typescript": "^4.1.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/verevinds/m-climate.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/verevinds/m-climate/issues"
-  },
-  "homepage": "https://github.com/verevinds/m-climate#readme",
-  "dependencies": {
-    "@verevinds/ui-kit": "^1.0.28",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1"
+    "typescript": "^4.1.5",
+    "@types/classnames": "^2.2.11",
+    "@types/luxon": "^1.25.1",
+    "@types/react-redux": "^7.1.16",
+    "sass": "^1.32.6",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-node": "^11.1.0"
   }
 }
