--- a/server/package.json
+++ b/server/package.json
@@ -11,26 +11,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "connect-busboy": "0.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
-    "fs-extra": "^9.1.0",
-    "mongoose": "^5.9.15",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.1",
-    "util": "^0.12.3"
-  },
-  "devDependencies": {
-    "@types/classnames": "^2.2.11",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0"
-  }
+  "license": "ISC"
 }
