Add rule import

--- a/.eslintrc
+++ b/.eslintrc
@@ -75,6 +75,7 @@
         "dot-notation": "off",
         "@typescript-eslint/dot-notation": 0,
         "jsx-a11y/label-has-associated-control": 0,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "import/no-extraneous-dependencies": 0
     }
 }
