--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -13,7 +13,7 @@
   ],
   "include": [
     ".env.d.ts",
-    "next-env.d.ts",
+    "../next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/*.js",
