--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
-    "@verevinds/ui-kit": "^1.0.41",
+    "@svgr/webpack": "^5.5.0",
+    "@verevinds/ui-kit": "^1.0.45",
     "axios": "^0.21.1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
