--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
     "@svgr/webpack": "^5.5.0",
-    "@verevinds/ui-kit": "^1.2.24",
+    "@verevinds/ui-kit": "^1.2.26",
     "axios": "^0.21.1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
@@ -80,7 +80,9 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "swiper": "^6.4.11",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "uuid": "^8.3.2",
+    "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.28",
