--- a/.eslintrc
+++ b/.eslintrc
@@ -76,6 +76,7 @@
         "@typescript-eslint/dot-notation": 0,
         "jsx-a11y/label-has-associated-control": 0,
         "no-underscore-dangle": 0,
-        "import/no-extraneous-dependencies": 0
+        "import/no-extraneous-dependencies": 0,
+        "react/no-danger": 0
     }
 }
