--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.11.7",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^9.1.0",
