--- a/.eslintrc
+++ b/.eslintrc
@@ -77,6 +77,7 @@
         "jsx-a11y/label-has-associated-control": 0,
         "no-underscore-dangle": 0,
         "import/no-extraneous-dependencies": 0,
-        "react/no-danger": 0
+        "react/no-danger": 0,
+        "react/display-name": 0
     }
 }
