--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^9.1.0",
@@ -73,6 +75,7 @@
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-hook-form": "^6.15.1",
     "react-images-uploading": "^3.1.2",
     "react-redux": "^7.2.2",
@@ -86,16 +89,23 @@
     "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/draftjs-to-html": "^0.8.0",
+    "@types/luxon": "^1.25.2",
     "@types/node": "^14.14.28",
+    "@types/react-draft-wysiwyg": "^1.13.1",
+    "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -105,6 +115,7 @@
     "lint-staged": "^10.5.4",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1",
+    "sass": "^1.32.7",
     "stylelint": "^13.10.0",
     "stylelint-config-airbnb": "0.0.0",
     "stylelint-config-prettier": "^8.0.2",
@@ -113,12 +124,6 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.19.0",
-    "typescript": "^4.1.5",
-    "@types/classnames": "^2.2.11",
-    "@types/luxon": "^1.25.2",
-    "@types/react-redux": "^7.1.16",
-    "sass": "^1.32.7",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-node": "^11.1.0"
+    "typescript": "^4.1.5"
   }
 }
