--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
     "@svgr/webpack": "^5.5.0",
-    "@verevinds/ui-kit": "^1.2.27",
+    "@verevinds/ui-kit": "^1.2.28",
     "axios": "^0.21.1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
@@ -79,6 +79,7 @@
     "react-hook-form": "^6.15.1",
     "react-images-uploading": "^3.1.2",
     "react-redux": "^7.2.2",
+    "react-select": "^4.1.0",
     "react-tooltip": "^4.2.13",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
@@ -95,6 +96,7 @@
     "@types/node": "^14.14.28",
     "@types/react-draft-wysiwyg": "^1.13.1",
     "@types/react-redux": "^7.1.16",
+    "@types/react-select": "^4.0.13",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "eslint": "^7.20.0",
