--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-preset-react": "6.24.1",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
+    "cogo-toast": "^4.2.3",
     "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
