--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "stylelint": "stylelint '**/*{.css,.scss}'",
     "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix",
     "docker": "docker-compose up -d",
-    "docker:production": "docker-compose -f docker-compose.yml -f production.yml up -d"
+    "docker:production": "npm install && docker-compose -f docker-compose.yml -f production.yml up -d"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
