--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^9.1.0",
+    "geoip-lite": "^1.4.2",
     "luxon": "^1.26.0",
     "mongoose": "^5.11.16",
     "morgan": "^1.10.0",
