--- a/admin/package.json
+++ b/admin/package.json
@@ -18,94 +18,5 @@
   "bugs": {
     "url": "https://github.com/verevinds/m-climate/issues"
   },
-  "homepage": "https://github.com/verevinds/m-climate#readme",
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@reduxjs/toolkit": "^1.5.0",
-    "@svgr/webpack": "^5.5.0",
-    "@verevinds/ui-kit": "^1.2.45",
-    "axios": "^0.21.1",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "body-parser": "^1.19.0",
-    "classnames": "^2.2.6",
-    "cogo-toast": "^4.2.3",
-    "connect-busboy": "0.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "draft-js": "^0.11.7",
-    "draft-js-export-html": "^1.4.1",
-    "draftjs-to-html": "^0.9.1",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
-    "fs-extra": "^9.1.0",
-    "geoip-lite": "^1.4.2",
-    "luxon": "^1.26.0",
-    "mongoose": "^5.11.16",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "next": "^10.0.6",
-    "next-redux-wrapper": "^6.0.2",
-    "nodemon": "^2.0.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-draft-wysiwyg": "^1.14.5",
-    "react-hook-form": "^6.15.1",
-    "react-images-uploading": "^3.1.2",
-    "react-redux": "^7.2.2",
-    "react-select": "^4.1.0",
-    "react-tooltip": "^4.2.13",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "swiper": "^6.4.11",
-    "util": "^0.12.3",
-    "uuid": "^8.3.2",
-    "uuid-v4": "^0.1.0"
-  },
-  "devDependencies": {
-    "@types/classnames": "^2.2.11",
-    "@types/draftjs-to-html": "^0.8.0",
-    "@types/luxon": "^1.25.2",
-    "@types/node": "^14.14.28",
-    "@types/react-draft-wysiwyg": "^1.13.1",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-select": "^4.0.13",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unicorn": "^28.0.0",
-    "husky": "^5.0.9",
-    "lint-staged": "^10.5.4",
-    "parcel-bundler": "^1.12.4",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.7",
-    "stylelint": "^13.10.0",
-    "stylelint-config-airbnb": "0.0.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.19.0",
-    "typescript": "^4.1.5"
-  }
+  "homepage": "https://github.com/verevinds/m-climate#readme"
 }
