--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@svgr/webpack": "^5.5.0",
     "@verevinds/ui-kit": "^1.2.45",
     "axios": "^0.21.1",
+    "axios-cache-adapter": "^2.7.1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-plugin-transform-class-properties": "6.24.1",
