--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sharp": "^0.27.2",
     "swiper": "^6.4.11",
     "util": "^0.12.3",
     "uuid": "^8.3.2",
