--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,11 @@ jobs:
     # The type of runner that the job will run on
     name: Build
     runs-on: self-hosted
-
+    env:
+      API: http://localhost:8081
+      API_SERVER: http://api:8081
+      API_PRODUCTION: http://localhost:8081
+      API_SERVER_PRODUCTION: http://m-climate_api_1.m-climate_local:8081
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
