--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
     name: Build
     runs-on: self-hosted
     env:
-      API: http://localhost:8081
+      API: http://139.59.94.5:8081
       API_SERVER: http://api:8081
-      API_PRODUCTION: http://localhost:8081
+      API_PRODUCTION: http://139.59.94.5:8081
       API_SERVER_PRODUCTION: http://m-climate_api_1.m-climate_local:8081
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
