--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Install dependencies
-        run: npm install
+        run: sudo npm ci
 
       # Runs a set of commands using the runners shell
       - name: Restart container
