--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,5 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Restart container
-        run: sudo docker-compose restart
+        run: docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
+
