--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: verevinds/m-climate@v2
+      - uses: verevinds/m-climate@main
         
       # Runs a single command using the runners shell
       - name: Install dependencies
