--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      #- uses: actions/checkout@v2
         
       # Runs a single command using the runners shell
       - name: Install dependencies
@@ -34,5 +34,5 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Restart container
-        run: sudo docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
+        run: sudo -S docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
 
