--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       #- uses: actions/checkout@v2
-      - name: Update repository
-        run: git pull
+      #- name: Update repository
+      #  run: git pull
         
       # Runs a single command using the runners shell
-      - name: Install dependencies
-        run: npm ci
+      #- name: Install dependencies
+       # run: npm ci
 
       # Runs a set of commands using the runners shell
       - name: Restart container
-        run: docker-compose restart
+        run: sudo docker-compose restart
 
