--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Restart container
-        run: sudo -S docker-compose restart < password.secret
+        run: sudo -S docker-compose restart
 
