Revert "Update docker-compose.yml"
This reverts commit 01f91f94a181f0505ac9ba799a2925a4a90f5735.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     volumes:
       - ./server:/app
       - ./node_modules:/app/node_modules
+    env_file:
+      - .env
     depends_on:
       - mongo
     networks:
@@ -30,6 +32,8 @@ services:
     volumes:
       - ./client:/app
       - ./node_modules:/app/node_modules
+    env_file:
+      - .env
     depends_on:
       - api
     networks:
@@ -48,6 +52,8 @@ services:
     volumes:
       - ./admin:/app
       - ./node_modules:/app/node_modules
+    env_file:
+      - .env
     depends_on:
       - api
     networks:
