--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,8 +3,13 @@ FROM node:14
 RUN mkdir -p /app
 WORKDIR /app
 
+COPY package*.json ./
+
+RUN npm install && npm cache clean --force --loglevel=error
+
 COPY . /app
 
-RUN npm install
 RUN npm install --global kill-port
 RUN npm install --global nodemon
+
+CMD ["npm", "run", "dev"]
