--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,19 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "geoip-lite": "^1.4.2",
+    "mongoose": "^5.11.16",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "sharp": "^0.27.2",
+    "uuid": "^8.3.2",
+    "uuid-v4": "^0.1.0"
+  }
 }
