--- a/.eslintrc
+++ b/.eslintrc
@@ -78,6 +78,7 @@
         "no-underscore-dangle": 0,
         "import/no-extraneous-dependencies": 0,
         "react/no-danger": 0,
-        "react/display-name": 0
+        "react/display-name": 0,
+        "@typescript-eslint/naming-convention": 0
     }
 }
